// =============================================================================
// Personal Task Manager - DBML for https://dbdiagram.io
// -----------------------------------------------------------------------------
// QUY ƯỚC ĐẶT TÊN
//   - service (schema) : chữ thường          -> identity, task
//   - table            : CHỮ HOA + hậu tố S  -> PROFILES, TASKS, TASK_STATUSES
//   - column           : snake_case thường   -> profile_id, created_at
//   - enum             : snake_case thường   -> task_priority, status_category
//   - Tham chiếu bảng  : <service>.<TABLES>
//
// PHẠM VI
//   identity  service : PROFILES (hồ sơ identity) + AUTH_PROVIDERS (đăng nhập)
//   workspace service : WORKSPACES (namespace gốc chứa mọi tài nguyên)
//   task      service : TASKS (cha/con), TASK_STATUSES (status của profile, 1-n),
//                       STATUS_TRANSITIONS (lifecycle rule), TASK_STATUS_LOGS
//
// NGUYÊN TẮC
//   - WORKSPACES là namespace gốc: profile sở hữu workspace, tài nguyên (task,
//     và các loại khác thêm sau) trỏ về workspace_id: TASKS.workspace_id ->
//     WORKSPACES.id.
//   - Status/transition thuộc sở hữu của profile_id.
//   - Rule chuyển trạng thái = ALLOWLIST: có row => được phép, không có => cấm.
//   - Ref khai báo theo TỪNG CỘT (single-column): mỗi Ref chỉ nối 1 cột -> 1 cột,
//     không dùng composite FK. Việc đảm bảo các bảng con cùng profile/workspace
//     được enforce ở tầng service (hoặc trigger).
//   - LƯU Ý: tên bảng viết HOA nên PostgreSQL luôn phải quote:
//     SELECT ... FROM "task"."TASKS". ORM cần mapping tên bảng.
// =============================================================================

Project task_manager {
  database_type: 'PostgreSQL'
}

// -----------------------------------------------------------------------------
// Enums
// -----------------------------------------------------------------------------
Enum task_priority {
  low
  medium
  high
  urgent
}

// Phân loại ngữ nghĩa của status, dùng cho logic app (auto set completed_at,
// coi là "đang mở", thống kê...). Không dùng để chặn transition.
Enum status_category {
  todo
  in_progress
  done
  cancelled
}

// =============================================================================
// SERVICE: identity
// =============================================================================
Table identity.PROFILES {
  id            uuid         [pk, default: `gen_random_uuid()`]
  email         varchar(255) [not null]
  password_hash varchar(255) [note: 'NULL nếu profile chỉ đăng nhập qua provider ngoài']
  display_name  varchar(100) [not null]
  avatar_url    text
  timezone      varchar(64)  [not null, default: 'Asia/Ho_Chi_Minh']
  locale        varchar(10)  [not null, default: 'vi']
  is_active     boolean      [not null, default: true]
  last_login_at timestamptz
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]
  deleted_at    timestamptz  [note: 'Soft delete']

  Note: '''
  Bảng hồ sơ identity gốc (trước đây là users -> IDENTITYS).
  Soft delete để không mất task/history.
  '''

  indexes {
    email [unique, name: 'uq_profiles_email']
    (is_active, deleted_at)
  }
}

// Tùy chọn: tách các phương thức đăng nhập ra khỏi PROFILES.
Table identity.AUTH_PROVIDERS {
  id               uuid         [pk, default: `gen_random_uuid()`]
  profile_id       uuid         [not null]
  provider         varchar(32)  [not null, note: 'email | google | github | apple']
  provider_user_id varchar(255) [not null, note: 'sub/uid trả về từ provider']
  created_at       timestamptz  [not null, default: `now()`]

  indexes {
    (profile_id, provider)       [unique, name: 'uq_auth_providers_profile_provider']
    (provider, provider_user_id) [unique, name: 'uq_auth_providers_provider_uid']
  }
}

// =============================================================================
// SERVICE: workspace
// =============================================================================

// --- Namespace gốc: mọi tài nguyên (task, ...) đều nằm trong 1 workspace ---
Table workspace.WORKSPACES {
  id               uuid         [pk, default: `gen_random_uuid()`]
  owner_profile_id uuid         [not null, note: 'Profile sở hữu workspace (hiện tại 1-n: 1 profile nhiều workspace)']
  name             varchar(120) [not null, note: 'Tên hiển thị: Cá nhân, Công việc...']
  slug             varchar(120) [not null, note: 'Key ổn định cho API/logic, unique theo owner']
  description      text
  color            varchar(9)   [note: '#RRGGBB hoặc #RRGGBBAA']
  icon             varchar(64)  [note: 'Tên icon hoặc emoji (tuỳ chọn)']
  is_default       boolean      [not null, default: false, note: 'Workspace mặc định khi tạo tài nguyên không chỉ định']
  position         integer      [not null, default: 0, note: 'Thứ tự hiển thị trên workspace switcher']
  is_archived      boolean      [not null, default: false, note: 'Ẩn khỏi UI nhưng giữ nguyên tài nguyên bên trong']
  created_at       timestamptz  [not null, default: `now()`]
  updated_at       timestamptz  [not null, default: `now()`]
  deleted_at       timestamptz  [note: 'Soft delete; không cascade xoá tài nguyên bên trong']

  Note: '''
  Namespace gốc của hệ thống. TASKS (và các tài nguyên khác) trỏ về đây qua
  workspace_id -> WORKSPACES.id. Việc task phải cùng profile với workspace được
  enforce ở tầng service (vì ref khai báo single-column, không dùng composite FK).

  Ràng buộc cần enforce thêm ở tầng DB (PostgreSQL partial unique index):
    CREATE UNIQUE INDEX uq_workspaces_one_default
      ON workspace.WORKSPACES (owner_profile_id)
      WHERE is_default AND NOT is_archived AND deleted_at IS NULL;
  Không hard-delete workspace đang có tài nguyên -> dùng is_archived/deleted_at.

  Mở rộng (chưa làm): nếu workspace chia sẻ cho nhiều người, thêm
  workspace.WORKSPACE_MEMBERS(workspace_id, profile_id, role).
  '''

  indexes {
    (id, owner_profile_id)   [unique, name: 'uq_workspaces_id_owner']
    (owner_profile_id, slug) [unique, name: 'uq_workspaces_owner_slug']
    (owner_profile_id, position)
    (owner_profile_id, is_archived, deleted_at)
  }
}

// =============================================================================
// SERVICE: task
// =============================================================================

// --- 1. Status thuộc quyền quản lý của profile (1-n) ---
Table task.TASK_STATUSES {
  id          uuid            [pk, default: `gen_random_uuid()`]
  profile_id  uuid            [not null]
  name        varchar(50)     [not null, note: 'Tên hiển thị: Todo, Đang làm, Done...']
  slug        varchar(50)     [not null, note: 'Key ổn định cho API/logic, unique theo profile']
  description text
  color       varchar(9)      [note: '#RRGGBB hoặc #RRGGBBAA']
  category    status_category [not null, default: 'todo']
  is_default  boolean         [not null, default: false, note: 'Status khởi tạo cho task mới']
  is_terminal boolean         [not null, default: false, note: 'Kết thúc flow; thường không có transition đi ra']
  position    integer         [not null, default: 0, note: 'Thứ tự hiển thị trên board']
  is_archived boolean         [not null, default: false, note: 'Ẩn khỏi UI nhưng giữ nguyên task cũ']
  created_at  timestamptz     [not null, default: `now()`]
  updated_at  timestamptz     [not null, default: `now()`]

  Note: '''
  Ràng buộc cần enforce thêm ở tầng DB (PostgreSQL partial unique index):
    CREATE UNIQUE INDEX uq_task_statuses_one_default
      ON task.TASK_STATUSES (profile_id) WHERE is_default AND NOT is_archived;
  Không hard-delete status đang được dùng -> dùng is_archived.
  '''

  indexes {
    (id, profile_id)   [unique, name: 'uq_task_statuses_id_profile']
    (profile_id, slug) [unique, name: 'uq_task_statuses_profile_slug']
    (profile_id, position)
  }
}

// --- 2. Lifecycle: rule chuyển trạng thái ---
//     Ví dụ: A -> B OK, A -> C OK, A -> D KHÔNG OK
//     => có row (A,B), (A,C); KHÔNG có row (A,D) là đủ để cấm.
Table task.STATUS_TRANSITIONS {
  id             uuid        [pk, default: `gen_random_uuid()`]
  profile_id     uuid        [not null]
  from_status_id uuid        [not null]
  to_status_id   uuid        [not null]
  is_active      boolean     [not null, default: true, note: 'Tắt rule mà không cần xoá']
  requires_note  boolean     [not null, default: false, note: 'Bắt buộc nhập lý do khi chuyển']
  guard          jsonb       [note: 'Điều kiện mở rộng: chỉ admin, phải có due_date... (tuỳ chọn)']
  description    text
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]

  Note: '''
  - UNIQUE (from_status_id, to_status_id): không khai báo trùng rule.
  - CHECK (from_status_id <> to_status_id): mặc định không cho A -> A.
  - Nếu muốn cho phép A -> A: bỏ check và thêm cờ allow_self_transition.
  - is_terminal = true thường đi kèm việc không tạo transition đi ra.
  '''

  indexes {
    (from_status_id, to_status_id) [unique, name: 'uq_status_transitions_from_to']
    (profile_id, from_status_id)
  }
}

// --- 3. Task (cha - con) ---
Table task.TASKS {
  id             uuid          [pk, default: `gen_random_uuid()`]
  workspace_id   uuid          [not null, note: 'Namespace chứa task; phải cùng profile sở hữu workspace (enforce ở service)']
  profile_id     uuid          [not null]
  parent_task_id uuid          [note: 'NULL = task gốc (root)']
  status_id      uuid          [not null]
  title          varchar(500)  [not null]
  description    text
  priority       task_priority [not null, default: 'medium']
  position       integer       [not null, default: 0, note: 'Thứ tự trong cùng parent']
  start_at       timestamptz
  due_at         timestamptz
  completed_at   timestamptz   [note: 'Set khi status chuyển sang category = done']
  is_archived    boolean       [not null, default: false]
  created_at     timestamptz   [not null, default: `now()`]
  updated_at     timestamptz   [not null, default: `now()`]
  deleted_at     timestamptz   [note: 'Soft delete; xoá cha không tự xoá con']

  Note: '''
  - Ref single-column: TASKS.workspace_id -> workspace.WORKSPACES.id.
    Task phải nằm trong workspace thuộc đúng profile sở hữu -> enforce ở service.
  - Ref single-column: TASKS.status_id -> task.TASK_STATUSES.id (task cha - con:
    TASKS.parent_task_id -> TASKS.id). Lưu ý ON DELETE SET NULL cho parent_task_id
    cần cú pháp Postgres 15+: ON DELETE SET NULL (parent_task_id).
  - Migration dữ liệu cũ: tạo workspace mặc định cho mỗi profile rồi backfill
    workspace_id trước khi set NOT NULL.
  - Chống vòng lặp (A là con của B, B là con của A) không thể khai báo thuần
    declarative -> enforce bằng trigger hoặc ở tầng service khi reparent.
  - Giới hạn độ sâu (ví dụ max 5 tầng) cũng nên enforce ở service/trigger.
  - Truy vấn cây dùng recursive CTE trên (workspace_id, parent_task_id);
    nếu cây sâu/nặng có thể thêm cột materialized path sau.
  '''

  indexes {
    (id, profile_id)                          [unique, name: 'uq_tasks_id_profile']
    (workspace_id, status_id)
    (workspace_id, parent_task_id, position)
    (workspace_id, due_at)
    (workspace_id, is_archived, deleted_at)
  }
}

// --- 4. Audit: lịch sử chuyển trạng thái ---
Table task.TASK_STATUS_LOGS {
  id             bigserial   [pk]
  task_id        uuid        [not null]
  profile_id     uuid        [not null]
  from_status_id uuid        [note: 'NULL = lần gán status đầu tiên']
  to_status_id   uuid        [not null]
  note           text
  changed_at     timestamptz [not null, default: `now()`]

  Note: '''
  Append-only. Dùng để: đo cycle time, hoàn tác, kiểm toán rule.
  Ghi log trong cùng transaction với update task.TASKS.status_id.
  '''

  indexes {
    (task_id, changed_at)
    (profile_id, to_status_id)
  }
}

// =============================================================================
// RELATIONSHIPS
// =============================================================================

// --- identity service ---
Ref: identity.AUTH_PROVIDERS.profile_id > identity.PROFILES.id [delete: cascade]

// --- workspace: profile sở hữu namespace ---
Ref: workspace.WORKSPACES.owner_profile_id > identity.PROFILES.id [delete: cascade]

// --- owner: mọi dữ liệu task đều thuộc 1 profile ---
Ref: task.TASK_STATUSES.profile_id > identity.PROFILES.id [delete: cascade]
Ref: task.STATUS_TRANSITIONS.profile_id > identity.PROFILES.id [delete: cascade]
Ref: task.TASKS.profile_id > identity.PROFILES.id [delete: cascade]

// --- lifecycle rules ---
Ref: task.STATUS_TRANSITIONS.from_status_id > task.TASK_STATUSES.id [delete: cascade]
Ref: task.STATUS_TRANSITIONS.to_status_id   > task.TASK_STATUSES.id [delete: cascade]

// --- task ---
Ref: task.TASKS.workspace_id   > workspace.WORKSPACES.id [delete: cascade]
Ref: task.TASKS.status_id      > task.TASK_STATUSES.id [delete: restrict]
Ref: task.TASKS.parent_task_id > task.TASKS.id [delete: no action]

// --- audit ---
Ref: task.TASK_STATUS_LOGS.task_id        > task.TASKS.id [delete: cascade]
Ref: task.TASK_STATUS_LOGS.from_status_id > task.TASK_STATUSES.id [delete: no action]
Ref: task.TASK_STATUS_LOGS.to_status_id   > task.TASK_STATUSES.id [delete: no action]

// =============================================================================
// TABLE GROUPS (chỉ để hiển thị đẹp trên dbdiagram, không ảnh hưởng DDL)
// =============================================================================
TableGroup identity_service {
  identity.PROFILES
  identity.AUTH_PROVIDERS
}

TableGroup workspace_service {
  workspace.WORKSPACES
}

TableGroup task_service {
  task.TASK_STATUSES
  task.STATUS_TRANSITIONS
  task.TASKS
  task.TASK_STATUS_LOGS
}

// =============================================================================
// GHI CHÚ MỞ RỘNG (chưa đưa vào scope hiện tại)
// -----------------------------------------------------------------------------
// - workspace: TASKS đã có workspace_id. TASK_STATUSES /
//   STATUS_TRANSITIONS hiện vẫn thuộc profile_id; nếu muốn mỗi workspace có
//   board/lifecycle riêng thì chuyển sang workspace_id (kèm backfill).
// - workspace_members: chia sẻ workspace cho nhiều profile (role: owner/editor/viewer).
// - lifecycles: nếu sau này 1 profile có NHIỀU workflow (Personal / Work / Study),
//   thêm bảng task.LIFECYCLES(profile_id, name, is_default) và cho TASK_STATUSES +
//   STATUS_TRANSITIONS trỏ về lifecycle_id thay vì trực tiếp profile_id.
// - tags / task_tags: gắn nhãn chéo cây task.
// - task_attachments, task_comments.
// - recurring_tasks: rule lặp (RRULE) sinh task định kỳ.
// - TASK_STATUS_LOGS nên bổ sung actor_id nếu sau này có chia sẻ task.
// =============================================================================
